k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focusmate-service
  labels:
    app: focusmate
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: focusmate
